--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "weatherwebhookai",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   }
